<resources>
    <string name="app_name">Parking</string>
    <string name="entrance">Entrada</string>
    <string name="exit">Saída</string>
    <string name="plate_number">Número da placa:</string>
    <string name="view_historic">Ver Histórico</string>
    <string name="hint">AAA-0000</string>
    <string name="back">Voltar</string>
    <string name="current_time">Tempo Atual</string>
    <string name="payment">Pagamento</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="registering">Registrando…</string>
    <string name="registered">Registrado!</string>
    <string name="plate">Placa</string>
    <string name="status">Status</string>
</resources>