<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".PlateDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/topToolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/Theme.Parking.PopupOverlay">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:src="@drawable/ic_parking" />

        <ImageView
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"
            android:src="@drawable/ic_menu" />

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topToolbar"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_layout_rounded"
        tools:context=".HistoricActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back"
            app:titleTextColor="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbarDetails"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plate"
                android:textAllCaps="true"
                android:textColor="@color/grey_text"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/plateDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="38sp"
                tools:text="ABC-1234" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/status"
                android:textAllCaps="true"
                android:textColor="@color/grey_text"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/statusDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:text="Estacionado" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/current_time"
                android:textAllCaps="true"
                android:textColor="@color/grey_text"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/currentTimeDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:text="1h20 min" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/payment"
                android:textAllCaps="true"
                android:textColor="@color/grey_text"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/paymentDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:text="Pago" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>